--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,6 @@ header {
   z-index: 10001 !important;
 }
 
-.btn_primary {
+.btn-primary {
   @apply px-7 py-2 bg-brandPrimary text-white rounded hover:bg-neutralDGrey transition-all duration-300 hover:-translate-y-4;
 }
